k8s/order/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
        version: v1
    spec:
      containers:
      - name: order
        image: mydockerhubuser/order:${TAG}
        ports:
        - containerPort: 3000
